# HTTPServer

./: .gitignore  CMakeLists.txt  README.md
include/: request.h  response.h  server.h
resources/: test.html
src/: request.c  response.c  server.c
